--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,33 +2,72 @@
 #the internet placeholders for the plugin are {attacker} {attacked}
 
 prefix: "&4[&c&lQBH&4] "
-strikemsg: "&c{attacked} has been struck by the Ban Hammer."
+# The prefix of the plugin, used in messages.
+ExecuteWithConsole: false
+# If true, the plugin will execute strike with the console instead of the player.
+
+StrikeWhitelist:
+    - "Player1"
+    - "Player2"
+# A list of players that are whitelisted from being struck by the hammers.
+
 hammers:
   "kickhammer":
     name: "&#303030&lB&#3F3F3F&lA&#4E4E4E&lN &#6C6C6C&lH&#7B7B7B&lA&#686868&lM&#565656&lM&#434343&lE&#303030&lR &f[Kick]"
-    lore: "Kicks the player from the server"
+    lore:
+      - "kicks the player from the server"
+      - "use this hammer to kick players"
+      - "from the server without banning them"
+    strike-msg: "&c{attacked} has been struck by the Ban Hammer."
     command: "kick {attacked} You have been kicked by the {attacker}"
     modeldata: 0
     permission: "qbanhammer.kickhammer"
 
   "xrayhammer":
+    strike-msg: "&c{attacked} has been struck by the Ban Hammer."
     name: "&#303030&lB&#3F3F3F&lA&#4E4E4E&lN &#6C6C6C&lH&#7B7B7B&lA&#686868&lM&#565656&lM&#434343&lE&#303030&lR &f[Xray]"
-    lore: "bans the player for xray"
+    lore:
+       - "bans the player for xray"
+       - "use this hammer to ban players"
+       - "for using xray hacks or mods"
     command: "ban {attacked} 30d xraying"
     modeldata: 0
     permission: "qbanhammer.xrayhammer"
 
 
   "cheatinghammer":
+    strike-msg: "&c{attacked} has been struck by the Ban Hammer."
     name: "&#303030&lB&#3F3F3F&lA&#4E4E4E&lN &#6C6C6C&lH&#7B7B7B&lA&#686868&lM&#565656&lM&#434343&lE&#303030&lR &f[Cheating]"
-    lore: "bans the player for cheating"
+    lore:
+        - "bans the player for cheating"
+        - "use this hammer to ban players"
+        - "for using cheats or hacks"
     command: "ban {attacked} 30d cheating"
     modeldata: 0
     permission: "qbanhammer.cheatinghammer"
 
   "permahammer":
+    strike-msg: "&c{attacked} has been struck by the Ban Hammer."
     name: "&#303030&lB&#3F3F3F&lA&#4E4E4E&lN &#6C6C6C&lH&#7B7B7B&lA&#686868&lM&#565656&lM&#434343&lE&#303030&lR &f[Perma]"
-    lore: "bans the player for ban evading"
+    lore:
+        - "bans the player permanently"
+        - "use this hammer to ban players"
+        - "for serious offenses or repeat offenders"
     command: "banip {attacked} Ban evading"
     modeldata: 0
     permission: "qbanhammer.permahammer"
+
+
+# messages
+Invalid-Subcommand: "&cInvalid subcommand."
+No-Subcommand: "&cYou must specify a subcommand."
+Console-Gethammer: "&cThis can only be executed by players."
+Hammer-Notspecified: "&cYou must specify a hammer."
+Hammer-NoPermission: "&cYou do not have permission to use this hammer."
+Invalid-Hammer: "&cInvalid hammer."
+Hammer-recieved: "&eYou have received a {hammer} &a!."
+No-Permission: "&cYou do not have permission to use this hammer."
+Whitelisted-Player: "&c{damaged} is immune to Ban Hammers."
+Confirmation-Message: "&eYou are about to strike {attacked} with a {hammer}. Click again to confirm."
+Confirmation-Timeout: "&cConfirmation timed out."
+Config-Reloaded: "&aConfiguration reloaded successfully."
