--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,5 +1,7 @@
 # This is the main config of the Qbannhamers plugin.
-#the internet placeholders for the plugin are {attacker} {attacked}
+#the internal placeholders for the plugin are {attacker} {attacked} {hammer} (used in there right place)
+# if you have any questions, please contact the developer on discord: https://discord.gg/rnqu8ks7Er
+
 
 prefix: "&4[&c&lQBH&4] "
 # The prefix of the plugin, used in messages.
@@ -7,55 +9,57 @@ ExecuteWithConsole: false
 # If true, the plugin will execute strike with the console instead of the player.
 
 StrikeWhitelist:
-    - "Player1"
-    - "Player2"
+  - "Player1"
+  - "Player2"
 # A list of players that are whitelisted from being struck by the hammers.
 
 hammers:
   "kickhammer":
     name: "&#303030&lB&#3F3F3F&lA&#4E4E4E&lN &#6C6C6C&lH&#7B7B7B&lA&#686868&lM&#565656&lM&#434343&lE&#303030&lR &f[Kick]"
     lore:
-      - "kicks the player from the server"
-      - "use this hammer to kick players"
-      - "from the server without banning them"
+      - "&f"
+      - "&7Kick hammer. Click on a player"
+      - "&7to kick them from the server."
+      - ""
+      - "&#303030&l | &#7B7B7BLeft-Click to ban a player!"
     strike-msg: "&c{attacked} has been struck by the Ban Hammer."
     command: "kick {attacked} You have been kicked by the {attacker}"
     modeldata: 0
-    permission: "qbanhammer.kickhammer"
 
   "xrayhammer":
     strike-msg: "&c{attacked} has been struck by the Ban Hammer."
-    name: "&#303030&lB&#3F3F3F&lA&#4E4E4E&lN &#6C6C6C&lH&#7B7B7B&lA&#686868&lM&#565656&lM&#434343&lE&#303030&lR &f[Xray]"
+    name: "&#A87406&lB&#B98412&lA&#CB941E&lN &#EEB337&lH&#FFC343&lA&#E9AF34&lM&#D49C25&lM&#BE8815&lE&#A87406&lR &f[XRAY]"
     lore:
-       - "bans the player for xray"
-       - "use this hammer to ban players"
-       - "for using xray hacks or mods"
+      - "&f"
+      - "&7Xray ban hammer. Click on a player"
+      - "&7to ban them for xray use."
+      - ""
+      - "&#A87406&l | &#FFC343Left-Click to ban a player!"
     command: "ban {attacked} 30d xraying"
     modeldata: 0
-    permission: "qbanhammer.xrayhammer"
-
 
   "cheatinghammer":
     strike-msg: "&c{attacked} has been struck by the Ban Hammer."
-    name: "&#303030&lB&#3F3F3F&lA&#4E4E4E&lN &#6C6C6C&lH&#7B7B7B&lA&#686868&lM&#565656&lM&#434343&lE&#303030&lR &f[Cheating]"
+    name: "&#A80606&lB&#B91212&lA&#CB1E1E&lN &#EE3737&lH&#FF4343&lA&#E93434&lM&#D42525&lM&#BE1515&lE&#A80606&lR &f[Cheaters]"
     lore:
-        - "bans the player for cheating"
-        - "use this hammer to ban players"
-        - "for using cheats or hacks"
-    command: "ban {attacked} 30d cheating"
+      - "&f"
+      - "&7ban hammer for cheaters. Click on a player"
+      - "&7to ban them for hacking on the server."
+      - ""
+      - "&#A80606&l | &#FF4343Left-Click to ban a player!"
     modeldata: 0
-    permission: "qbanhammer.cheatinghammer"
 
   "permahammer":
     strike-msg: "&c{attacked} has been struck by the Ban Hammer."
-    name: "&#303030&lB&#3F3F3F&lA&#4E4E4E&lN &#6C6C6C&lH&#7B7B7B&lA&#686868&lM&#565656&lM&#434343&lE&#303030&lR &f[Perma]"
+    name: "&#37169C&lB&#3E19B0&lA&#451CC4&lN &#5221EB&lH&#5924FF&lA&#5121E6&lM&#481DCE&lM&#401AB5&lE&#37169C&lR &f[Perma]"
     lore:
-        - "bans the player permanently"
-        - "use this hammer to ban players"
-        - "for serious offenses or repeat offenders"
+      - "&f"
+      - "&7Permanent ban hammer. Click on a player"
+      - "&7to ban them permenently from the server."
+      - ""
+      - "&#37169C&l | &#5924FFLeft-Click to ban a player!"
     command: "banip {attacked} Ban evading"
     modeldata: 0
-    permission: "qbanhammer.permahammer"
 
 
 # messages
